test/invalid/baseline/extattr-empty.txt
Syntax error at line 1 in extattr-empty.webidl:
[]
 ^ An extended attribute list must not be empty
